testsuite/tests/dependent/should_fail/SelfDepCls.hs
module SelfDepCls where

class C (a :: C)
